--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "mode": "11.1.0"
+    "node": "11.1.0"
   },
   "main": "index.js",
   "scripts": {
