--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ out/
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 .vs/
+.vscode/
 
 # JIRA plugin
 atlassian-ide-plugin.xml
@@ -116,4 +117,5 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 .idea/
+
 
